<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="50dp"
    android:background="@color/colorGreyOpactity"
    android:theme="@style/Theme.MaterialComponents"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/layoutNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlackGithub"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <LinearLayout
            android:id="@+id/slideDown"
            android:layout_width="40dp"
            android:layout_height="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:orientation="vertical" />

        <ImageView
            android:id="@+id/imPhotoProfil"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/profile_image" />

        <TextView
            android:id="@+id/tvNameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Nama" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:textColor="@color/colorGreyOpactity"
            tools:text="Email" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFollowers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutNama"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_shape"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/tvJumlahFollowers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_158"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/followers"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_shape"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/tvJumlahFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_158"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_shape"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/tvJumlahRepo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_158"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRepo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_below="@id/btWeb"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:id="@+id/tvIsiBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repository"
        android:textColor="@color/black"
        android:layout_below="@id/tvBio"
        android:layout_marginHorizontal="30dp"/>
    <Button
        android:id="@+id/btWeb"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:layout_below="@id/layoutFollowers"
        android:layout_centerHorizontal="true"
        android:text="@string/cek_website"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorBlackGithub"
        app:icon="@drawable/ic_baseline_language_24"
        app:iconTint="@color/white"/>


    <ProgressBar
        android:id="@+id/progressBarDetail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:id="@+id/emptyViewDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_centerInParent="true">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieDetail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="no_internet.json"
            app:lottie_loop="true" />

        <TextView
            android:textAlignment="center"
            android:id="@+id/tvEmptyViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_tidak_ditemukan"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>
    </LinearLayout>
</RelativeLayout>